test/fail/EtaData.err
EtaData.agda:8,5-5
EtaData.agda:8,5: Parse error
ETA<ERROR>
 Prod #-}

-- The ETA pragma d...
